k3s_cluster/base/default/openwrt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: default
  labels:
    app: main-openwrt
spec:
  type: ClusterIP
  selector:
    app: main-openwrt
  ports:
    - name: web
      protocol: TCP
      port: 2240
      targetPort: 80
    - name: websecure
      protocol: TCP
      port: 2243
      targetPort: 443
