k3s_cluster/base/default/openwrt/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress
  namespace: default
  labels:
    app: main-openwrt
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`openwrt.main.home`)
      # middlewares:
      #   - name: main-middleware-auth-authentik
      services:
        - name: main-openwrt-service
          port: 2240
          #tls: {}
